@@ -29,8 +29,8 @@
 *   Boston, MA  02110-1301  USA
 */
 /****************************************************************
-* $Revision: 1.9 $
-* $Date: 2009/01/16 08:36:22 $
+* $Revision: 1.10 $
+* $Date: 2009/02/16 14:10:28 $
 *****************************************************************/
 
 #ifdef APOT
@@ -50,6 +50,14 @@ int apot_parameters(char *name)
     return 2;
   } else if (strcmp(name, "eopp") == 0) {
     return 6;
+  } else if (strcmp(name, "morse") == 0) {
+    return 3;
+  } else if (strcmp(name, "softshell") == 0) {
+    return 2;
+  } else if (strcmp(name, "eoppexp") == 0) {
+    return 6;
+  } else if (strcmp(name, "meopp") == 0) {
+    return 7;
   }
 
   /* template for new potential function called newpot */
@@ -78,6 +86,14 @@ int apot_assign_functions(apot_table_t *apt)
       apt->fvalue[i] = &lj_value;
     } else if (strcmp(apt->names[i], "eopp") == 0) {
       apt->fvalue[i] = &eopp_value;
+    } else if (strcmp(apt->names[i], "morse") == 0) {
+      apt->fvalue[i] = &morse_value;
+    } else if (strcmp(apt->names[i], "softshell") == 0) {
+      apt->fvalue[i] = &softshell_value;
+    } else if (strcmp(apt->names[i], "eoppexp") == 0) {
+      apt->fvalue[i] = &eoppexp_value;
+    } else if (strcmp(apt->names[i], "meopp") == 0) {
+      apt->fvalue[i] = &meopp_value;
     }
 
 /* template for new potential function called newpot */
@@ -138,6 +154,68 @@ void eopp_value(real r, real *p, real *f)
 }
 
 /******************************************************************************
+*
+* morse potential
+*
+******************************************************************************/
+
+void morse_value(real r, real *p, real *f)
+{
+  *f = p[0] * (exp(-2 * p[1] * (r - p[2])) - 2 * exp(-p[1] * (r - p[2])));
+}
+
+/******************************************************************************
+*
+* softshell potential
+*
+******************************************************************************/
+
+void softshell_value(real r, real *p, real *f)
+{
+  static real x, y, power;
+
+  x = p[0] / r;
+  y = p[1];
+  vdPow(1, &x, &y, f);
+}
+
+/******************************************************************************
+*
+* eopp_exp potential
+*
+******************************************************************************/
+
+void eoppexp_value(real r, real *p, real *f)
+{
+  static real x, y, power;
+
+  x = r;
+  y = p[3];
+  vdPow(2, &x, &y, &power);
+
+  *f = p[0] * exp(-p[1] * r) + (p[2] / power) * cos(p[4] * r + p[5]);
+}
+
+/******************************************************************************
+*
+* meopp potential
+*
+******************************************************************************/
+
+void meopp_value(real r, real *p, real *f)
+{
+  static real x[2], y[2], power[2];
+
+  x[0] = r - p[6];
+  x[1] = r;
+  y[0] = p[1];
+  y[1] = p[3];
+  vdPow(2, x, y, power);
+
+  *f = p[0] / power[0] + (p[2] / power[1]) * cos(p[4] * r + p[5]);
+}
+
+/******************************************************************************
 * 
 * template for new potential function called mypotential 
 * for further information plase have a look at the online documentation
@@ -179,11 +257,6 @@ int apot_validate(int param_index, real new_val)
   real  x;
 
   if (pot_index < apot_table.number) {
-/*     if (par == NULL) */
-/*       par = (real *)malloc(apot_table.n_par[pot_index] * sizeof(real)); */
-/*     for (i = 0; i < apot_table.n_par[pot_index]; i++) */
-/*       *(par + i) = apot_table.values[pot_index][i]; */
-/*     *(par + apot_table.idxparam[param_index]) = new_val; */
 
     /* check if potential vanishes at 3*cutoff */
     apot_table.fvalue[pot_index] (3 * apot_table.end[pot_index],
